# F5-TTS

./: ADAPTERS_README.md  pyproject.toml  selected_speakers.csv
src/f5_tts/configs/: ROTTS_v1_Base.yaml
src/f5_tts/infer/: infer_adapters.py  infer_cli.py  infer_gradio.py  utils_infer.py
src/f5_tts/model/: __init__.py  adapters.py  cfm.py  dataset.py  language_trainer.py  modules.py  trainer.py  transliterator.py  utils.py
src/f5_tts/model/backbones/: dit.py  grad_reversal.py
src/f5_tts/train/: compare.py  eval_config_example.py  finetune_cli.py  grpo_train.py  train.py  train_adapters.py
src/f5_tts/train/datasets/: prepare_csv_wavs.py
